--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <header><!--Capçalera pagina--></header>
-    <nav><!--Barra navegacio--></nav>
-    <main><!--Contingut/Cos--></main>
-    <footer><!--Peu de pagina--></footer>
+    <header><!--Capçalera pagina-->
+      <h1>LOGO</h1>
+      <img src="#" alt="#">
+      <div>
+        <a href="#">Educem_net</a>
+      </div>
+      <nav><!--Barra navegacio-->
+          <ul>
+          <li><a href="#">Catala</a></li>
+          <li><a href="#">English</a></li>
+          <li><a href="#">Español</a></li>
+        </ul>
+      </nav>
+  </header>
+    <main><!--Contingut/Cos-->
+      <p>Lorem Impus</p>
+    </main>
+    <footer><!--Peu de pagina-->
+      <a href="#">Inici</a>
+      <p>@ 2020 Educem_net</p>
+    </footer>
   </body>
 </html>
